--- a/style.css
+++ b/style.css
@@ -9,15 +9,22 @@ header, nav, footer {
     padding: 30px;
 }
 
+.mid-wrap {
+    height: 263.78px;
+    box-sizing: border-box;
+    margin: 0;
+}
+
 section {
     position: relative;
     top: 0;
     left: 20px;
     float: left;
-    width: 55%;
     width: 495px;
     padding-top: 20px;
     margin: 0;
+    height: 100%;
+    box-sizing: border-box;
 }
 
 aside {
@@ -26,7 +33,8 @@ aside {
     left: 45px;
     width: 400px;
     float: left;
-    height: 263.78px;
+    height: 100%;
+    margin: 0;
 }
 
 article {
@@ -43,7 +51,7 @@ article {
 footer {
     clear: both;
     position: relative;
-    top: 20px;
+    /* top: 20px; */
 }
 
 body, article {
